# OWLOOP

./: .gitignore  CMakeLists.txt  README.md  Robot1  build.gradle  package.xml  settings.gradle
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
docs/it/emarolab/owloop/articleExamples/drugOrderExample/: drugOrder.html  package-frame.html  package-summary.html  package-tree.html
docs/it/emarolab/owloop/articleExamples/example1/: ConstructOntology.html  addAxioms.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/it/emarolab/owloop/articleExamples/example2/: UseDescriptorBuild.html  package-frame.html  package-summary.html  package-tree.html  package-use.html  useDescriptorBuildMethod.html
docs/it/emarolab/owloop/articleExamples/example3/: RemoveAxioms.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
docs/it/emarolab/owloop/articleExamples/exampleDescriptors/: CorridorClassDesc.html  CorridorConceptDesc.html  DefClassDesc.html  DefConceptDesc.html  DefSubClassDesc.html  DefSubConceptDesc.html  LocationClassDesc.html  LocationConceptDesc.html  (+8 more)
docs/it/emarolab/owloop/core/: Axiom.Descriptor.OntologyReference.html  Axiom.Descriptor.html  Axiom.EntitySet.SynchronisationIntent.html  Axiom.EntitySet.html  Axiom.ExpressionEntity.html  Axiom.ExpressionEntitySet.SynchronisationMultiIntent.html  Axiom.ExpressionEntitySet.SynchroniseContainedIntent.html  Axiom.ExpressionEntitySet.html  Axiom.Ground.html  Axiom.MappingIntent.html  Axiom.html  Class.Disjoint.html  Class.Equivalent.html  Class.Instance.html  Class.Restriction.html  Class.Sub.html  Class.Super.html  Class.html  Concept.Disjoint.html  Concept.Equivalent.html  Concept.Instance.html  Concept.Restriction.html  Concept.Sub.html  Concept.Super.html  Concept.html  DataProperty.Disjoint.html  DataProperty.Domain.html  DataProperty.Equivalent.html  DataProperty.Range.html  DataProperty.Sub.html  DataProperty.Super.html  DataProperty.html  Individual.DataLink.html  Individual.Disjoint.html  Individual.Equivalent.html  Individual.ObjectLink.html  Individual.Type.html  Individual.html  ObjectProperty.Disjoint.html  ObjectProperty.Domain.html  (+10 more)
docs/it/emarolab/owloop/descriptorDebugging/: FullClassDescTest.html  FullConceptDescTest.html  FullDataPropertyDescTest.html  FullIndividualDescTest.html  FullObjectPropertyDescTest.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
documentation/: NotesDuringDevelopment.txt
documentation/javaDoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
documentation/javaDoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
gitRepoResources/: NotesDuringDevelopment.txt
gradle/wrapper/: gradle-wrapper.properties
owloop/: build.gradle
owloop/src/test/resources/: robotAtHomeOntology.owl
repositoryResources/: NotesDuringDevelopment.txt
src/test/resources/: HumanActivityOntologyNew.owl  catalog-v001.xml  conceptTest.owl  dataPropertyTest.owl  drug.owl  individualTest.owl  objectPropertyTest.owl  owloopTestOntology.owl  robotAtHomeOntology.owl  tboxTest.owl
src/test/resources/debug/: dataPropertyTest.owl  individualTest.owl  objectPropertyTest.owl  ontology4debugging.owl  robotHomeTesting.owl
src/test/resources/tests/: conceptTest.owl
(+721 files in other folders)
